application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: application-ingress
  namespace: app

spec:
  rules:
    - host: www.dreggystore.com
      http:
        paths:
          - path: /
            backend:
              service:
                name:  web-svc
                port:
                  number: 80
