application/ingress2.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-admin
  namespace: frontend
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: frontend-mw-admin@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: www.dreggystore.com
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name:  websvc
                port:
                  number: 80
